# routes/index.js
@@ -4,7 +4,7 @@ const { requiresAuth } = require('express-openid-connect');
 
 // router.use('/', require('./home'));
 router.use('/', requiresAuth(), require('./swagger'));
-// router.use('/users', require('./users'));
+router.use('/users', require('./users'));
 router.use('/recipes', requiresAuth(), require('./recipes'));
 
 module.exports = router;
